--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ rumqttc = "0.23.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.36.0", features = ["full"] }
+futures = "0.3.30"
